[package]
name = "rsdirect"
version = "0.1.0"
authors = ["phantamanta44 <evandalong@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
env_logger = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "2.33"
http = "0.2"
tokio = { version = "1", features = ["full"] }
warp = { version = "0.3", features = ["tls"] }
